tests/neg-macros/i6371/B_2.scala
object B {
  A.foo("aa") // error
}
